editor/tree-sitter-ss/test/corpus/basic.txt
================================================================================
Declarations and a page
================================================================================

import std:themes/default as *
import std:themes/default

const gap: number = 24

@render("text")
fn h1(text: string) -> object
  return object(text, "title", "text")
end

type Hero = object {
  title: string = "Intro"
}

extend Hero {
  subtitle: string = ""
}

page "Intro"
  let title = h1("Hello")
  let subtitle = default::h2("Sub")
  text <<
Markdown body
>>
  ~ title.left == page.left + gap
end

--------------------------------------------------------------------------------

(source_file
  (import_declaration
    spec: (import_spec))
  (import_declaration
    spec: (import_spec))
  (const_declaration
    name: (identifier)
    type: (type
      (primary_type))
    value: (number))
  (function_declaration
    (annotation
      name: (identifier)
      (annotation_arg
        (annotation_value
          (string))))
    name: (bare_callable_identifier
      (identifier))
    (parameters
      (parameter
        name: (identifier)
        type: (type
          (primary_type))))
    result: (type
      (primary_type))
    (return_statement
      value: (call_expression
        function: (callable_identifier
          (bare_callable_identifier
            (identifier)))
        (identifier)
        (string)
        (string))))
  (type_declaration
    name: (type_identifier)
    (object_type
      (object_member
        (object_field
          name: (identifier)
          type: (type
            (primary_type))
          (string)))))
  (object_extension
    target: (type_identifier)
    (object_member
      (object_field
        name: (identifier)
        type: (type
          (primary_type))
        (string))))
  (page_declaration
    name: (string)
    (let_statement
      name: (identifier)
      value: (call_expression
        function: (callable_identifier
          (bare_callable_identifier
            (identifier)))
        (string)))
    (let_statement
      name: (identifier)
      value: (call_expression
        function: (callable_identifier
          (qualified_callable_identifier
            module: (identifier)
            name: (bare_callable_identifier
              (identifier))))
        (string)))
    (block_call_statement
      function: (callable_identifier
        (bare_callable_identifier
          (identifier)))
      text: (block_text))
    (constrain_statement
      left: (member_expression
        object: (identifier)
        member: (identifier))
      right: (binary_expression
        (member_expression
          object: (identifier)
          member: (identifier))
        (identifier)))))

================================================================================
Constraint updates
================================================================================

page Layout
  ~!~item.center_x
  ~!~item.left == page.left + 48
  ~!~ item.width == 320
end

--------------------------------------------------------------------------------

(source_file
  (page_declaration
    name: (identifier)
    (constraint_update_statement
      target: (member_expression
        object: (identifier)
        member: (identifier)))
    (constraint_update_statement
      target: (member_expression
        object: (identifier)
        member: (identifier))
      source: (binary_expression
        (member_expression
          object: (identifier)
          member: (identifier))
        (number)))
    (constraint_update_statement
      target: (member_expression
        object: (identifier)
        member: (identifier))
      source: (number))))
