editor/tree-sitter-ss/test/corpus/comments.txt
================================================================================
Semicolon and hash comments preserve double slashes in strings
================================================================================

;; first comment
# second comment
const url: String = "https://example.com/a//b"

--------------------------------------------------------------------------------

(source_file
  (comment)
  (comment)
  (const_declaration
    (identifier)
    (type (primary_type (type_identifier)))
    (string)))

================================================================================
Double slash is not a comment
================================================================================

//

--------------------------------------------------------------------------------

(source_file
  (ERROR))
