editor/tree-sitter-ss/test/corpus/control-flow.txt
================================================================================
Document block, control flow, and properties
================================================================================

document
  page_no_all()
end

page "Control"
  let title = text("Control")
  let items = list("a", "b")
  for item, index in items
    if index then
      property title "data-kind" item
    else
      set_prop(title, "fallback", c"#fff")
    end
  end
end

--------------------------------------------------------------------------------

(source_file
  (document_block
    (expression_statement
      (call_expression
        function: (callable_identifier
          (identifier)))))
  (page_declaration
    name: (string)
    (let_statement
      name: (identifier)
      value: (call_expression
        function: (callable_identifier
          (identifier))
        (string)))
    (let_statement
      name: (identifier)
      value: (call_expression
        function: (callable_identifier
          (identifier))
        (string)
        (string)))
    (for_statement
      item: (identifier)
      index: (identifier)
      source: (identifier)
      (if_statement
        condition: (identifier)
        (property_statement
          target: (identifier)
          key: (string)
          value: (identifier))
        (expression_statement
          (call_expression
            function: (callable_identifier
              (identifier))
            (identifier)
            (string)
            (color_string)))))))
