editor/tree-sitter-ss/test/corpus/modern-syntax.txt
================================================================================
Function types and lambdas
================================================================================

const plus_one: number -> number = (x: number) |-> x + 1

fn make_label(text_value: string) -> page -> object
  return (page_value: page)
    |->
      place_on!(page_value, new(text_value, "body", "text"))
end

fn use(callback: (page -> object) -> document, pair: (page, document) -> object, thunk: () -> number) -> void
  foreach(pages(docctx()), (page_value: page) |-> pair(page_value, docctx()))
  return
end

page Lambda
  let title = link(head "Lambda syntax", "lambda")
  title.text_color = c"#334455"
  docctx().footer_text = title.content ?? "footer"
  let has_color = title.text_color?
  let missing_color = !has_color
  let sample = code """
fn sample() -> number
  return 1
end
"""
  let value = ((x: number) |-> x + 1)(2)
end

--------------------------------------------------------------------------------

(source_file
  (const_declaration
    (identifier)
    (type
      (function_type
        (primary_type)
        (type
          (primary_type))))
    (lambda_expression
      (lambda_parameters
        (lambda_parameter
          (identifier)
          (type
            (primary_type))))
      (binary_expression
        (identifier)
        (number))))
  (function_declaration
    (bare_callable_identifier
      (identifier))
    (parameters
      (parameter
        (identifier)
        (type
          (primary_type))))
    (type
      (function_type
        (primary_type)
        (type
          (primary_type))))
    (return_statement
      (lambda_expression
        (lambda_parameters
          (lambda_parameter
            (identifier)
            (type
              (primary_type))))
        (call_expression
          (callable_identifier
            (bare_callable_identifier
              (identifier)))
          (identifier)
          (call_expression
            (callable_identifier
              (bare_callable_identifier
                (identifier)))
            (identifier)
            (string)
            (string))))))
  (function_declaration
    (bare_callable_identifier
      (identifier))
    (parameters
      (parameter
        (identifier)
        (type
          (function_type
            (type
              (function_type
                (primary_type)
                (type
                  (primary_type))))
            (type
              (primary_type)))))
      (parameter
        (identifier)
        (type
          (function_type
            (type
              (primary_type))
            (type
              (primary_type))
            (type
              (primary_type)))))
      (parameter
        (identifier)
        (type
          (function_type
            (type
              (primary_type))))))
    (type
      (primary_type))
    (expression_statement
      (call_expression
        (callable_identifier
          (bare_callable_identifier
            (identifier)))
        (call_expression
          (callable_identifier
            (bare_callable_identifier
              (identifier)))
          (call_expression
            (callable_identifier
              (bare_callable_identifier
                (identifier)))))
        (lambda_expression
          (lambda_parameters
            (lambda_parameter
              (identifier)
              (type
                (primary_type))))
          (call_expression
            (callable_identifier
              (bare_callable_identifier
                (identifier)))
            (identifier)
            (call_expression
              (callable_identifier
                (bare_callable_identifier
                  (identifier))))))))
    (return_statement))
  (page_declaration
    (identifier)
    (let_statement
      (identifier)
      (call_expression
        (callable_identifier
          (bare_callable_identifier
            (identifier)))
        (text_call_expression
          (callable_identifier
            (bare_callable_identifier
              (identifier)))
          (string))
        (string)))
    (member_assignment_statement
      (member_expression
        (identifier)
        (identifier))
      (color_string))
    (member_assignment_statement
      (member_expression
        (call_expression
          (callable_identifier
            (bare_callable_identifier
              (identifier))))
        (identifier))
      (property_default_expression
        (member_expression
          (identifier)
          (identifier))
        (string)))
    (let_statement
      (identifier)
      (property_exists_expression
        (member_expression
          (identifier)
          (identifier))))
    (let_statement
      (identifier)
      (unary_expression
        (identifier)))
    (let_statement
      (identifier)
      (text_call_expression
        (callable_identifier
          (bare_callable_identifier
            (identifier)))
        (string)))
    (let_statement
      (identifier)
      (call_expression
        (parenthesized_expression
          (lambda_expression
            (lambda_parameters
              (lambda_parameter
                (identifier)
                (type
                  (primary_type))))
            (binary_expression
              (identifier)
              (number))))
        (number)))))

================================================================================
Bang calls and paired placement functions
================================================================================

fn/! note(text_value: string) -> object
  return text(text_value)
end

fn place_direct!(obj: object) -> object
  return place!(obj)
end

page Bang
  let card = note("draft")
  note!("placed")
  place!(new("loose", "body", "text"))
  text! <<
body text
>>
end

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters
      (parameter
        (identifier)
        (type
          (primary_type))))
    (type
      (primary_type))
    (return_statement
      (call_expression
        (callable_identifier
          (bare_callable_identifier
            (identifier)))
        (identifier))))
  (function_declaration
    (bare_callable_identifier
      (identifier))
    (parameters
      (parameter
        (identifier)
        (type
          (primary_type))))
    (type
      (primary_type))
    (return_statement
      (call_expression
        (callable_identifier
          (bare_callable_identifier
            (identifier)))
        (identifier))))
  (page_declaration
    (identifier)
    (let_statement
      (identifier)
      (call_expression
        (callable_identifier
          (bare_callable_identifier
            (identifier)))
        (string)))
    (expression_statement
      (call_expression
        (callable_identifier
          (bare_callable_identifier
            (identifier)))
        (string)))
    (expression_statement
      (call_expression
        (callable_identifier
          (bare_callable_identifier
            (identifier)))
        (call_expression
          (callable_identifier
            (bare_callable_identifier
              (identifier)))
          (string)
          (string)
          (string))))
    (block_call_statement
      (callable_identifier
        (bare_callable_identifier
          (identifier)))
      (block_text))))
