editor/tree-sitter-ss/test/corpus/modules.txt
================================================================================
Qualified object bases and extension targets
================================================================================

type Derived = object {
  base = library::Base
}

extend library::Derived {
  implements = protocols::Contract
}

--------------------------------------------------------------------------------

(source_file
  (type_declaration
    (type_identifier)
    (object_type
      (object_member
        (object_base
          (qualified_type_identifier
            (identifier)
            (type_identifier))))))
  (object_extension
    (qualified_type_identifier
      (identifier)
      (type_identifier))
    (object_member
      (object_implements
        (qualified_type_identifier
          (identifier)
          (type_identifier))))))

================================================================================
Qualified object and selection annotations
================================================================================

fn keep(value: Object<library::Derived>, values: Selection<Object<library::Derived>>) -> library::Derived
  return value
end

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (bare_callable_identifier
      (identifier))
    (parameters
      (parameter
        (identifier)
        (type
          (primary_type
            (qualified_type_identifier
              (identifier)
              (type_identifier)))))
      (parameter
        (identifier)
        (type
          (primary_type
            (type
              (primary_type
                (qualified_type_identifier
                  (identifier)
                  (type_identifier))))))))
    (type
      (primary_type
        (qualified_type_identifier
          (identifier)
          (type_identifier))))
    (return_statement
      (identifier))))

================================================================================
Selected imports with explicit placement names
================================================================================

import std:core/objects as { body_obj, body_obj! }
import "library" as {
  Item,
  make, make!, ;; retained declaration names
}

--------------------------------------------------------------------------------

(source_file
  (import_declaration
    (import_spec)
    (selected_imports
      (bare_callable_identifier (identifier))
      (bare_callable_identifier (identifier))))
  (import_declaration
    (string)
    (selected_imports
      (bare_callable_identifier (identifier))
      (bare_callable_identifier (identifier))
      (bare_callable_identifier (identifier))
      (comment))))
